--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                   <div class="formControl">
                           <label for="password">Senha</label>
                           <input type="password" id="password">
+                          <p class="errorPass">A senha precisa ter mais de 8 digitos</p>
                           <i class="fa-sharp fa-solid fa-circle-check iconneSuccess"></i>
                           <i class="fa-solid fa-circle-xmark iconneError"></i>
                  </div>
@@ -39,6 +40,7 @@
                   <div class="formControl">
                           <label for="passwordTwo">Corfirmar  Senha</label>
                           <input type="password" id="passwordTwo">
+                          <p class="errorPass">Senhas diferentes</p>
                           <i class="fa-sharp fa-solid fa-circle-check iconneSuccess"></i>
                           <i class="fa-solid fa-circle-xmark iconneError"></i>
                  </div>
